<resources>
    <string name="app_name">RegistrationApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag">Let\'s join us and \nBuild your relationship with others</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="re_type_address">Enter Address</string>
    <string name="your_name">Full Name</string>
    <string name="nameerror">Enter Valid Name</string>
    <string name="emailerror">Enter Valid Email</string>
    <string name="passworderror">Enter Some Password</string>
    <string name="mobileerror">Enter Valid Mobile Number</string>
    <string name="addresserror">Enter Valid Address</string>
    <string name="action_settings">Settings</string>
    <string name="invalid_age">age should be 12 to 60</string>
</resources>
